Update Question Bank question styles - Add 'text-transform: none' to question buttons - Replace disabled checkbox with check icon for used questions - Remove italics from non-button questions - Fix some layout issues - Add tooltip to question buttons, screen reader text for check icon

--- a/src/assets/wise5/components/peerChat/peer-chat-question-bank/peer-chat-question-bank.component.scss
+++ b/src/assets/wise5/components/peerChat/peer-chat-question-bank/peer-chat-question-bank.component.scss
@@ -4,19 +4,22 @@
   padding: 8px;
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
-mat-card-content {
+.questions {
   margin-top: 8px;
   padding: 8px;
   border-radius: $button-border-radius;
   overflow: auto;
 }
 
-.question {
-  font-style: italic;
+.question-button {
+  text-transform: none;
+  text-align: start;
+  min-height: 36px;
+  height: auto;
 }
 
 ul {
+  margin: 0;
   padding: 0;
   list-style-type: none;
 }
